# landlord-tenant-reviews-drf-backend

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: manage.py
app/landlord_tenant_reviews_drf_backend/: asgi.py  settings.py  urls.py  wsgi.py
