[tool.poetry]
name = "landlord-tenant-reviews-drf-backend"
version = "0.1.0"
description = ""
authors = ["PeterChen <sanpeter992000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
